--- a/internal/mailer/templates/user_welcome.tmpl
+++ b/internal/mailer/templates/user_welcome.tmpl
@@ -1,8 +1,8 @@
 {{define "subject"}}Welcome to Greenlight!{{ end }}
 {{define "plainBody"}}
-Hi, Thanks for signing up for a Greenlight account. We're excited to have you on
-board! For future reference, your user ID number is {{.ID}}. Thanks, The
-Greenlight Team
+Hi, {{.FirstName}} Thanks for signing up for a Library account. We're excited to
+have you on board! For future reference, your user ID number is {{.ID}}. Thanks,
+The Library Team
 {{ end }}
 {{define "htmlBody"}}
 <!DOCTYPE html>
@@ -12,14 +12,14 @@ Greenlight Team
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
   <body>
-    <p>Hi,</p>
+    <p>Hi, {{.FirstName}}</p>
     <p>
-      Thanks for signing up for a Greenlight account. We're excited to have you
-      on board!
+      Thanks for signing up for a Library account. We're excited to have you on
+      board!
     </p>
     <p>For future reference, your user ID number is {{.ID}}.</p>
     <p>Thanks,</p>
-    <p>The Greenlight Team</p>
+    <p>The Library Team</p>
   </body>
 </html>
 {{ end }}
